force-app/main/default/objects/ICV_Contract_Performance_Party__c/ICV_Contract_Performance_Party__c.object-meta.xml
<CustomObject>
    <label>ICV Contract Performance Party</label>
    <nameField>
        <displayFormat>P-{00000000}</displayFormat>
        <label>ICV Contract Performance Party Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ICV Contract Performance Party</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>