force-app/main/default/objects/ICV_Contract_Performance_Party__c/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <label>Display Name</label>
    <length>125</length>
    <type>Text</type>
</CustomField>