force-app/main/default/objects/ICV_Contract_Performance_Party__c/fields/ICV_Contract_Performance__c.field-meta.xml
<CustomField>
    <fullName>ICV_Contract_Performance__c</fullName>
    <label>ICV Contract Performance</label>
    <referenceTo>ICV_Contract_Performance__c</referenceTo>
    <relationshipLabel>ICV Contract Performance Party</relationshipLabel>
    <relationshipName>ICV_Contract_Performance_Party</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>